# software_engineering

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: main.yml  windows-build.yml
CleanCode/: CMakeLists.txt
DesignPatern/: CMakeLists.txt
DesignPatern/src/Behavioral/: README.md
DesignPatern/src/Behavioral/ChainOfResponsibility/: ATM_chain_of_responsibility.cpp  chain_of_responsibility_handler.cpp  photoProcessor.cpp  photo_processor.cpp
DesignPatern/src/Behavioral/Command/: LightOnCommand.cpp  giant_command.cpp  light_on_command.cpp  light_on_command_template_based.cpp
DesignPatern/src/Behavioral/Interpreter/: math_expression_interpreter.cpp  robot_command_interpreter.cpp
DesignPatern/src/Behavioral/Iterator/: iterator.cpp  iterator_design_pattern.cpp
DesignPatern/src/Behavioral/Mediator/: air_traffic_control.cpp  airport_mediator_traffic_pattern.cpp  chat_room_mediator.cpp
DesignPatern/src/Behavioral/Memento/: notepad_memento.cpp
DesignPatern/src/Behavioral/NullObject/: animal_null_object.cpp  ball_screen_saver_null_object.cpp  binary_tree_null_object.cpp
DesignPatern/src/Behavioral/Observer/: car_observer.cpp  chat_room_observer.cpp  clocktimer.cpp  weather_station_observer.cpp
DesignPatern/src/Behavioral/State/: machine_on_off_state.cpp  music_player_state.cpp
DesignPatern/src/Behavioral/Strategy/: billing_strategy.cpp  conceptual_strategy.cpp  robot.cpp
DesignPatern/src/Behavioral/TemplateMethod/: template_method.cpp  template_method_order.cpp
DesignPatern/src/Behavioral/Visitor/: car_visitor.cpp  car_visitor_template_based.cpp  color_visitor.cpp  document_visitor.cpp  expression_printer.cpp  file_visitor.cpp  shopping_item_visitor.cpp  stock_visitor.cpp
DesignPatern/src/Behavioral/diagrams/: ATM_chain_of_responsibility.puml  air_traffic_control_mediator.puml  car_visitor.puml  chat_mediator.puml  command.puml  observer.puml  order_process_template.puml
DesignPatern/src/Creational/: README.md
DesignPatern/src/Creational/AbstractFactoryMethod/: car_abstract_factory.cpp  gui_abstract_factory.cpp  maze_abstract_factory.cpp  shape_abstract_factory.cpp
DesignPatern/src/Creational/Builder/: airplane_builder.cpp  pizza_builder.cpp
DesignPatern/src/Creational/FactoryMethod/: ai_agent_factory_method.cpp  computer_factory_method.cpp  factory_method_conceptual.cpp  frameworks_factory_method.cpp  gui_factory_method.cpp  parameterized_factory_methods.cpp  vehicle_factory_method.cpp
DesignPatern/src/Creational/ObjectPool/: expensive_object.cpp  thread_safe_object_pool.cpp
DesignPatern/src/Creational/Prototype/: bullet_prototype.cpp  prototype.cpp
DesignPatern/src/Creational/Singleton/: logger_singletone.cpp  naive_singleton.cpp  singleton_before_after.cpp
DesignPatern/src/Creational/diagrams/: abstract_factory.puml  bullet_prototype.puml  computer_factory_method.puml  factory_method_conceptual.puml  pizza_builder.puml
DesignPatern/src/Structural/: README.md
DesignPatern/src/Structural/Adapter/: external_polymorphism.cpp  legecy_rectangle.cpp
DesignPatern/src/Structural/Bridge/: drawingAPI_bridge.cpp  main.cpp  remote_dvd_tv.cpp  time.cpp
DesignPatern/src/Structural/Composite/: graph_composite.cpp  neural_network.cpp
DesignPatern/src/Structural/Decorator/: customized_car_decorater.cpp  ice_cream_decorator.cpp  logger_decorater.cpp  tennis_decorator.cpp
DesignPatern/src/Structural/Facade/: main.cpp
DesignPatern/src/Structural/Flyweight/: flyweight_conceptual.cpp  flyweight_counter_strike.cpp  flyweight_millions_of_tree.cpp
DesignPatern/src/Structural/Proxy/: before_and_after.cpp  more_example  protection_proxy.cpp
DesignPatern/src/Structural/diagrams/: composite.puml  decorator.puml  flyweight_counter_strike.puml
ModelViewController/: model_view_controller.cpp  student_model_view_controller.cpp
Refactoring/: CMakeLists.txt  README.md  main.cpp
Refactoring/BadCodeSmells/: README.md
Refactoring/BadCodeSmells/Bloaters/Primitive_Obsession/: primitive_obsession.cpp
Refactoring/BadCodeSmells/Couplers/Feature_Envy/: feature_envy.cpp
Refactoring/BadCodeSmells/Couplers/Message_Chains/: message_chains.cpp
Refactoring/RefactoringTechniques/ComposingMethods/: README.md
Refactoring/RefactoringTechniques/MovingFeaturesBetweenObjects/: README.md
Refactoring/RefactoringTechniques/OrganizingData/: README.md
RuleOfThreeFiveZero/: CMakeLists.txt  rule_of_five.cpp  rule_of_three.cpp  rule_of_zero.cpp
SDLC/: README.md
SOLID/: CMakeLists.txt
SOLID/DependencyInjection/: dependency_injection_car_enginge.cpp  dependency_inversion_principle.cpp
SOLID/InterfaceSegregationPrinciple/: interface_segregation_principle.cpp
SOLID/LiskovSubstitutionPrinciple/: liskov_substitution_principle.cpp
SOLID/OpenClosedPrinciple/: open_closed_principle.cpp
SOLID/SingleResponsibilityPrinciple/: single_responsibility_principle.cpp
SoftwareArchitecturalPatterns/: CMakeLists.txt
SoftwareArchitecturalPatterns/EntityComponentSystem/: CMakeLists.txt  README.md
SoftwareArchitecturalPatterns/EntityComponentSystem/src/: simple_ECS_movement_simulation.cpp
SoftwareArchitecturalPatterns/ModelViewController/: CMakeLists.txt
SystemDesign/: index.md
UML/: README.md  main.cpp
UML/BehavioralDiagrams/ActivityDiagram/: README.md
UML/BehavioralDiagrams/CommunicationDiagram/: README.md
UML/BehavioralDiagrams/InteractionOverviewDiagram/: README.md
UML/Concepts/: README.md
UML/Extensibility/: README.md
UML/src/: class_diagram.cpp  class_diagram.cpp.autosave
clean_code/: main.cpp
docs/: the_flaws_of_inheritance.md
docs/DesignPatern/Behavioral/: Command.md  (+12 more)
docs/UML/: CMakeLists.txt
src/Behavioral/: README.md
src/Creational/: README.md
src/DependencyInjection/: ServiceLocator.hpp
src/Dependency_Injection/: ServiceLocator.hpp  to read
src/UML/: UML_class_diagram_explanation_samples.cpp
src/dependency_injection/: dependency_injection.cpp  simple_dependency_injection.cpp
youtube/images/: programmer_04__Converted_.eps  vecteezy_bill-money-dollar_.eps
youtube/thumbnail/: README.md
(+151 files in other folders)
