add_executable(single_responsibility_principle SingleResponsibilityPrinciple/single_responsibility_principle.cpp)
target_link_libraries(single_responsibility_principle)

add_executable(open_closed_principle OpenClosedPrinciple/open_closed_principle.cpp)
target_link_libraries(open_closed_principle)

add_executable(liskov_substitution_principle LiskovSubstitutionPrinciple/liskov_substitution_principle.cpp)
target_link_libraries(liskov_substitution_principle)

add_executable(interface_segregation_principle InterfaceSegregationPrinciple/interface_segregation_principle.cpp)
target_link_libraries(interface_segregation_principle)

add_executable(dependency_injection_car_enginge DependencyInjection/dependency_injection_car_enginge.cpp)
target_link_libraries(dependency_injection_car_enginge)

add_executable(dependency_inversion_principle DependencyInjection/dependency_inversion_principle.cpp)
target_link_libraries(dependency_inversion_principle)
